src/objects/Manifest__c.object
<CustomObject>
    <fields>
        <fullName>Commit__c</fullName>
        <description>The commit reference from the CVS that is associated with this manifest</description>
        <inlineHelpText>Commit reference ID associated with this manifest</inlineHelpText>
        <label>Commit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
<!--     <fields>
        <fullName>DestinationOwnerId__c</fullName>
        <formula>Destination__r.OwnerId</formula>
        <label>DestinationOwnerId</label>
        <type>Text</type>
    </fields>
 -->    <fields>
        <fullName>DestinationType__c</fullName>
        <label>DestinationType</label>
        <length>128</length>
        <type>Text</type>
    </fields>
<!--     <fields>
        <fullName>Destination_Status__c</fullName>
        <description>Returns the status of the manifest&apos;s destination. Created to use in filtering a report.</description>
        <formula>TEXT( Destination__r.Status__c )</formula>
        <label>Destination Status</label>
        <type>Text</type>
    </fields>
 --><!--     <fields>
        <fullName>Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Manifests (Inbound)</relationshipLabel>
        <relationshipName>Change_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
 -->    <fields>
        <fullName>NotifyNewOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotifyNewOwner</label>
        <type>Checkbox</type>
    </fields>
<!--     <fields>
        <fullName>NumCodeChanges__c</fullName>
        <label>NumCodeChanges</label>
        <summaryFilterItems>
            <field>Change_Junction__c.CodeChange__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Change_Junction__c.Change_Set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
 --><!--     <fields>
        <fullName>Num_Changes__c</fullName>
        <label>Num Changes</label>
        <summaryForeignKey>Change_Junction__c.Change_Set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields> -->
<!--     <fields>
        <fullName>Num_Deployed__c</fullName>
        <label>Num Deployed</label>
        <summaryFilterItems>
            <field>Change_Junction__c.Deployed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Change_Junction__c.Change_Set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields> -->
<!--     <fields>
        <fullName>Num_Outstanding__c</fullName>
        <formula>Num_Changes__c - Num_Deployed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields> -->
    <fields>
        <fullName>OriginId__c</fullName>
        <formula>Origin__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OriginId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Origin</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Manifests (Outbound)</relationshipLabel>
        <relationshipName>Change_Sets3</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
<!--     <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Change_Set__c</referenceTo>
        <relationshipLabel>Children</relationshipLabel>
        <relationshipName>Manifests</relationshipName>
        <type>Lookup</type>
    </fields> -->
    <!-- <fields>
        <fullName>Percent_Deployed__c</fullName>
        <formula>if( Num_Changes__c &gt; 0, Num_Deployed__c /  Num_Changes__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields> -->
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X80_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to indicate that the changes in the manifest have at least 80% test coverage.</inlineHelpText>
        <label>80% Coverage</label>
        <type>Checkbox</type>
    </fields>
    <label>Manifest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Origin__c</columns>
        <!-- <columns>Destination__c</columns> -->
        <!-- <columns>Num_Changes__c</columns> -->
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manifests</pluralLabel>
    <sharingModel>Read</sharingModel>
<!--     <validationRules>
        <fullName>Code_changes_must_assert_80_coverage</fullName>
        <active>true</active>
        <errorConditionFormula>AND(   NumCodeChanges__c  &gt; 0 ,  X80_Coverage__c = FALSE ,  ISPICKVAL( Status__c , &quot;Pending Deployment&quot;  ) )</errorConditionFormula>
        <errorDisplayField>X80_Coverage__c</errorDisplayField>
        <errorMessage>Please check and confirm that all associated code changes have at least 80% code coverage.</errorMessage>
    </validationRules>
 --></CustomObject>